# aethlen

./: .gitignore  docker-compose.yml
aethlen/: .dockerignore  .gitignore  Cargo.toml  docker-compose.min.yml  docker-compose.yml  docker-inventory-2025-10-19_00-01-27.txt  jar.txt  wanted.lst
aethlen/apps/: file.txt
aethlen/apps/aethlen_ai/: Cargo.toml
aethlen/apps/aethlen_ai/src/: urls.rs
aethlen/apps/aethlen_ai/src/models/: mod.rs
aethlen/apps/aethlen_ai/src/serializers/: aethlen_rewrite.rs
aethlen/apps/aethlen_ai/src/views/: aethlen_rewrite.rs  mod.rs
aethlen/apps/aethlen_core/: Cargo.toml
aethlen/apps/aethlen_core/src/: lib.rs  urls.rs
aethlen/apps/aethlen_core/src/models/: mod.rs  refresh_token.rs  user.rs
aethlen/apps/aethlen_core/src/serializers/: aethlen_echo.rs  mod.rs  user_auth.rs
aethlen/apps/aethlen_core/src/views/: aethlen_echo.rs  aethlen_health.rs  mod.rs  user_auth.rs
aethlen/argos-server/: Dockerfile  app.py
aethlen/gateway/: .env.example  Cargo.toml  Dockerfile
aethlen/gateway/src/: main.rs
aethlen/migration/: Cargo.toml
aethlen/migration/src/: lib.rs  m2025_10_08_create_docs_chunks.rs  m2025_10_10_000001_create_refresh_tokens.rs
aethlen/ops/: docker-compose.yml
iryx/: Cargo.toml
iryx/apps/iryx_ai/: Cargo.toml
iryx/apps/iryx_ai/src/: lib.rs
iryx/apps/iryx_ai/src/views/: iryx_rewrite.rs
iryx/apps/iryx_core/: Cargo.toml
iryx/apps/iryx_core/src/: urls.rs
iryx/apps/iryx_core/src/views/: iryx_health.rs
iryx/gateway/: .env  Cargo.toml
iryx/gateway/src/: main.rs
iryx/migration/src/: lib.rs  m2025_10_08_create_docs_chunks.rs  m2025_10_08_create_documents.rs
