[workspace]
members = [
  "gateway",
  "apps/aethlen_core",
  "apps/aethlen_ai",
  "migration",
]
resolver = "2"

[workspace.dependencies]
# Web
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }

# Serde/Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

# Logs/Errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1"
thiserror = "1"

# Database (pinned to avoid CLI bug; and disable default features on migration)
sea-orm = { version = "=0.12.14", features = ["macros","runtime-tokio-rustls","sqlx-postgres","with-chrono"] }
sea-orm-migration = { version = "=0.12.14", default-features = false, features = ["runtime-tokio-rustls","sqlx-postgres"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls","postgres"] }
chrono = { version = "0.4", features = ["serde"] }
