[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# DB
sea-orm = { workspace = true }
migration = { path = "../migration" }

# apps
iryx_core = { path = "../apps/aethlen_core" }
iryx_ai   = { path = "../apps/aethlen_ai" }
