[package]
name = "aethlen_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web / middleware
axum = { workspace = true }

# Async / timers (needed by janitor)
tokio = { workspace = true }

# Serde / logs / errors
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# DB/Auth/Crypto/Time
sea-orm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
cookie = { workspace = true }
uuid = { workspace = true }

# migrations
migration = { path = "../../migration" }
sea-orm-migration = { workspace = true, default-features = false, features = ["runtime-tokio-rustls","sqlx-postgres"] }
